# pybind_proto_example

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  line.proto  line_pybind.cpp  line_utils.cpp  line_utils.h  line_utils_py_test.py  py_line_utils.py  workspace_deps.bzl
patches/: com_google_protobuf.patch
